--- a/AdminBundle/Resources/Public/css/less/navbar-items.less
+++ b/AdminBundle/Resources/Public/css/less/navbar-items.less
@@ -11,7 +11,7 @@
   .user-profile-info {
     transform: translateY(-1000px);
     transition: 1s;
-    z-index: 99;
+    z-index: 101;
     display: block;
     position: fixed;
     right: 44px;
@@ -75,7 +75,7 @@
   .notifications {
     transform: translateY(-1000px);
     transition: all 1s, z-index 0s;
-    z-index: 99;
+    z-index: 101;
     display: block;
     position: fixed;
     right: 315px;
@@ -389,7 +389,7 @@
     border-top: none;
     .shadow(-2px, 4px, 8px, 0, rgba(0, 0, 0, .25));
 
-    z-index: 99;
+    z-index: 101;
 
     li {
       height: 40px;
