--- a/AdminBundle/Resources/Public/css/less/navbar.less
+++ b/AdminBundle/Resources/Public/css/less/navbar.less
@@ -17,7 +17,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      z-index: 100;
+      z-index: 1001;
     }
   }
 
