--- a/AdminBundle/Resources/Public/css/less/widgets.less
+++ b/AdminBundle/Resources/Public/css/less/widgets.less
@@ -59,7 +59,7 @@
       padding: 0;
 
       display: none;
-      z-index: 9;
+      z-index: 100;
       opacity: .35;
 
       -webkit-transition: opacity 0.3s ease-in-out;
@@ -114,6 +114,18 @@
       font-weight: 300;
       color: @header-font-color;
     }
+
+    footer{
+      width: 100%;
+      height: 50px;
+      left: 0;
+      position: absolute;
+      bottom: 0;
+      /* background: red; */
+      z-index: 99;
+      box-shadow: 0 -25px 15px -15px #ffffff inset;
+    }
+
 
 /*    !*  Grid in widgets  *!
     .data-grid {
@@ -235,13 +247,28 @@
   #show-widgets-form {
     .row {
       width: 650px;
-      border: none;
-      border-radius: 6px;
+      //border: none;
+      //border-radius: 6px;
+      border: 1px solid #adadad;
       padding: 20px;
+      box-shadow: none;
+      border-radius: 0;
+      background: #fff;
+      //max-height: none;
 
-      .shadow(0, 0, 20px, 0, rgba(0, 0, 0, .45));
+      //.shadow(0, 0, 20px, 0, rgba(0, 0, 0, .45));
+
+      //faking with dashoard settings...
+      &:first-of-type{
+        border-bottom: none;
+      }
+      &:last-of-type{
+        max-height: 400px;
+        border-top: none;
+      }
 
       .row {
+        border: none;
         box-shadow: none;
         padding: 0 0 10px 0;
       }
@@ -265,7 +292,7 @@
   #dashboard {
     overflow-y: auto;
     overflow-x: hidden;
-    max-height: 450px;
+    //max-height: 450px;
     .choice {
       border: none;
       width: 100%;
@@ -457,6 +484,8 @@
     }
 
   }
+
+
 
   //  JS changing classes for widget field depending on their position in grid
   // here are just space between them
